# garminWorkout

./: LICENSE  README.md  pyproject.toml
examples/input/: intervals1.yaml
